ui/src/snapshots/ui__layout__tests__layout_1280x720.snap
---
source: ui/src/layout.rs
expression: l
---
PanelLayout {
    width: 1280.0,
    height: 720.0,
    status_bar: Rect {
        x: 0.0,
        y: 0.0,
        w: 1280.0,
        h: 28.0,
    },
    top_bar: Rect {
        x: 0.0,
        y: 28.0,
        w: 1280.0,
        h: 40.0,
    },
    filesystem: Rect {
        x: 0.0,
        y: 68.0,
        w: 256.0,
        h: 428.0,
    },
    terminal: Rect {
        x: 256.0,
        y: 68.0,
        w: 742.0,
        h: 428.0,
    },
    sysinfo: Rect {
        x: 998.0,
        y: 68.0,
        w: 282.0,
        h: 428.0,
    },
    keyboard: Rect {
        x: 0.0,
        y: 496.0,
        w: 1280.0,
        h: 224.0,
    },
    tab_strip: Rect {
        x: 264.0,
        y: 76.0,
        w: 726.0,
        h: 26.0,
    },
    fs_handle: Rect {
        x: 253.0,
        y: 68.0,
        w: 6.0,
        h: 428.0,
    },
    sysinfo_handle: Rect {
        x: 995.0,
        y: 68.0,
        w: 6.0,
        h: 428.0,
    },
    key_h: 36.0,
}
