ui/src/snapshots/ui__layout__tests__layout_2560x1440.snap
---
source: ui/src/layout.rs
expression: l
---
PanelLayout {
    width: 2560.0,
    height: 1440.0,
    status_bar: Rect {
        x: 0.0,
        y: 0.0,
        w: 2560.0,
        h: 28.0,
    },
    top_bar: Rect {
        x: 0.0,
        y: 28.0,
        w: 2560.0,
        h: 40.0,
    },
    filesystem: Rect {
        x: 0.0,
        y: 68.0,
        w: 512.0,
        h: 1148.0,
    },
    terminal: Rect {
        x: 512.0,
        y: 68.0,
        w: 1485.0,
        h: 1148.0,
    },
    sysinfo: Rect {
        x: 1997.0,
        y: 68.0,
        w: 563.0,
        h: 1148.0,
    },
    keyboard: Rect {
        x: 0.0,
        y: 1216.0,
        w: 2560.0,
        h: 224.0,
    },
    fs_handle: Rect {
        x: 509.0,
        y: 68.0,
        w: 6.0,
        h: 1148.0,
    },
    sysinfo_handle: Rect {
        x: 1994.0,
        y: 68.0,
        w: 6.0,
        h: 1148.0,
    },
    key_h: 36.0,
}
